--- a/PokeCSharp.UI/PokeCSharp.UI.csproj
+++ b/PokeCSharp.UI/PokeCSharp.UI.csproj
@@ -8,4 +8,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="PokeCSharp.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="PokeCSharp.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
