--- a/PokeCSharp.DataAccess/PokeCSharp.DataAccess.csproj
+++ b/PokeCSharp.DataAccess/PokeCSharp.DataAccess.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PokeCSharp.Models\PokeCSharp.Models.csproj" />
   </ItemGroup>
 
 </Project>
