--- a/PokeCSharp.UI/PokeCSharp.UI.csproj
+++ b/PokeCSharp.UI/PokeCSharp.UI.csproj
@@ -18,4 +18,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PokeCSharp.DataAccess\PokeCSharp.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
